functionService sonar